--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,9 +8,13 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-
-    - run: python -V
+    -
+      uses: actions/checkout@v2
+    -
+      name: Python versions
+      run: |
+        python -V
+        python3 -V
 
     - name: Run test
-      run:  python main.py
+      run:  python3 main.py
